completed main page styling

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,5 +1,6 @@
 @import "setup";
 @import "variables";
+@import "general";
 @import "instruction";
 @import "battleground";
 @import "user-interaction";
