commented html code

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,6 +1,10 @@
+
+
 @import "setup";
 @import "variables";
 @import "general";
+@import "header";
 @import "instruction";
 @import "battleground";
 @import "user-interaction";
+
