--- a/styles/sass/_user-interaction.scss
+++ b/styles/sass/_user-interaction.scss
@@ -1,16 +1,18 @@
 
+
 .user-interaction {
     background-color: #283030;
     height: 150px;
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
     align-items: center;
 
     .selection {
         border: 10px solid #7d7eaf;
         background-color: #f8f8f8;
-        width: 50%;
-        height: 100%;
+        width: calc(70% - 1%);
+        height: 90%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -18,7 +20,7 @@
         .selection-button {
             background-color: #f8f8f8;
             height: 70%;
-            width: 20%;
+            width: 30%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -35,9 +37,10 @@
 
             .sprite-label {
                 font-family: 'Press Start 2P', cursive;
-                font-size: 1.6rem;     
+                font-size: 1.6rem;  
+                text-transform: uppercase;   
                 height: 25%;           
-                padding-top: 5%;
+                padding-top: 8%;
             }
 
         }
@@ -45,8 +48,8 @@
 
     .submission {
         background-color: #c7a750;
-        width: 50%;
-        height: 100%;
+        width: calc(30% - 1%);
+        height: 90%;
         display: flex;
         justify-content: center;
         align-items: center;
