--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,11 +259,10 @@ body {
   max-width: 1200px;
   width: 70%;
   margin: 0 auto;
-  border: 1px blue solid;
 }
 
 .pokebattle {
-  padding-top: 2%;
+  padding: 3% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -329,7 +328,6 @@ body {
 }
 
 .battleground {
-  border: 1px black solid;
   padding: 2% 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -423,6 +421,9 @@ body {
   display: flex;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -431,8 +432,8 @@ body {
 .user-interaction .selection {
   border: 10px solid #7d7eaf;
   background-color: #f8f8f8;
-  width: 50%;
-  height: 100%;
+  width: calc(70% - 1%);
+  height: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -447,7 +448,7 @@ body {
 .user-interaction .selection .selection-button {
   background-color: #f8f8f8;
   height: 70%;
-  width: 20%;
+  width: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -473,14 +474,15 @@ body {
 .user-interaction .selection .selection-button .sprite-label {
   font-family: 'Press Start 2P', cursive;
   font-size: 1.6rem;
+  text-transform: uppercase;
   height: 25%;
-  padding-top: 5%;
+  padding-top: 8%;
 }
 
 .user-interaction .submission {
   background-color: #c7a750;
-  width: 50%;
-  height: 100%;
+  width: calc(30% - 1%);
+  height: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
