--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,6 +273,10 @@ body {
           justify-content: space-evenly;
 }
 
+.title {
+  margin: 0 auto;
+}
+
 .pulldown-menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -284,13 +288,42 @@ body {
 
 .pulldown-menu .instructions {
   background-color: #fece2f;
-  color: #ffffff;
+  color: #000000;
+  text-shadow: -2px -2px #ffffff;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 100%;
   z-index: 10;
+  line-height: 2.5rem;
+  text-align: center;
+}
+
+.pulldown-menu .instructions h2 {
+  margin-top: 11%;
+  font-size: 3.5rem;
+  -webkit-text-decoration: underline 5px;
+          text-decoration: underline 5px;
+  -webkit-text-decoration-style: dashed;
+          text-decoration-style: dashed;
+}
+
+.pulldown-menu .instructions p {
+  font-size: 2rem;
+  margin-top: 1%;
+}
+
+.pulldown-menu .instructions p:first-of-type {
+  margin-top: 7%;
+}
+
+.pulldown-menu .instructions p:nth-of-type(2) {
+  margin-top: 2%;
+}
+
+.pulldown-menu .instructions p:last-of-type {
+  margin-top: 2%;
 }
 
 .pulldown-menu input[type="checkbox"]:checked + .instructions {
@@ -317,7 +350,8 @@ body {
 }
 
 .pulldown-menu label[for="toggle"] .information-title {
-  color: #386cba;
+  color: blue;
+  text-shadow: -2px -2px #ffffff;
 }
 
 .pulldown-menu label[for="toggle"] .sprite-container .information-sprite {
@@ -325,8 +359,16 @@ body {
   width: 100%;
 }
 
-.title {
-  margin: 0 auto;
+.grass-colour {
+  color: green;
+}
+
+.water-colour {
+  color: blue;
+}
+
+.fire-colour {
+  color: red;
 }
 
 .battleground {
