starting media queries

--- a/styles/sass/_user-interaction.scss
+++ b/styles/sass/_user-interaction.scss
@@ -46,6 +46,7 @@
         }
     }
 
+    // Battle Button
     .submission {
         background-color: #c7a750;
         width: calc(30% - 1%);
@@ -58,7 +59,7 @@
             background-color: #295068;
             color: #f8f8f8;
             font-family: 'Press Start 2P', cursive;
-            font-size: 3.0rem;
+            font-size: 3rem;
             border: 10px solid #f8f8f8;
             width: 95%;
             height: 90%;
