--- a/styles/sass/_results.scss
+++ b/styles/sass/_results.scss
@@ -1,8 +1,9 @@
 
 
-.results { // use commented out code during results function js
-    background-color: #000000;
-    display: none;
+.results { 
+    background-color: #7d7eaf;
+    border: 10px solid #283030;
+    display: flex;
     height: 78vh;
     width: 70%;
     margin: 0 auto;
@@ -10,12 +11,10 @@
     top: 20%;
     left: 15%;
     z-index: 100;
-    
-    // display: flex;
-    // flex-direction: column;
-    // flex-wrap: nowrap;
-    // justify-content: center;
-    // align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
 
     .results-title {
         font-family: 'Press Start 2P', cursive;
@@ -27,7 +26,6 @@
     .results-gif-container {
         height: 60%;
         width: 90%;
-        border: 1px white solid;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -51,3 +49,6 @@
     }
 }
 
+.hidden {
+    display:none;
+}
