--- a/styles/styles.css
+++ b/styles/styles.css
@@ -549,8 +549,11 @@ body {
 }
 
 .results {
-  background-color: #000000;
-  display: none;
+  background-color: #7d7eaf;
+  border: 10px solid #283030;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 78vh;
   width: 70%;
   margin: 0 auto;
@@ -558,6 +561,18 @@ body {
   top: 20%;
   left: 15%;
   z-index: 100;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .results .results-title {
@@ -570,7 +585,6 @@ body {
 .results .results-gif-container {
   height: 60%;
   width: 90%;
-  border: 1px white solid;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -597,6 +611,10 @@ body {
   width: 150px;
   height: 10%;
   margin-top: 2%;
+}
+
+.hidden {
+  display: none;
 }
 
 @media (max-width: 1265px) {
