minor capitalizations and result box fix

--- a/styles/sass/_results.scss
+++ b/styles/sass/_results.scss
@@ -1,10 +1,10 @@
 
-
+// Results Div
 .results { 
     background-color: #7d7eaf;
     border: 10px solid #283030;
     display: flex;
-    height: 78vh;
+    height: 79vh;
     width: 70%;
     margin: 0 auto;
     position: absolute;
