--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -554,7 +554,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 79vh;
+  height: 78vh;
   width: 70%;
   margin: 0 auto;
   position: absolute;
@@ -628,3 +628,4 @@ body {
     font-size: 2rem;
   }
 }
+/*# sourceMappingURL=styles.css.map */
