--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -19,3 +19,148 @@
         }
     }
 }
+
+@media (max-width: 860px) {
+    // Instructions
+    .pulldown-menu {
+        // Instructions Text Section
+        .instructions {
+            h2 {
+                font-size: 3rem;
+                margin-top: 15%;
+            }
+    
+            p {
+                font-size: 1.8rem;
+                margin-top: 3%;
+            }
+    
+            p:first-of-type {
+                margin-top: 10%;
+            }
+    
+            p:nth-of-type(2) {
+                margin-top: 3%;
+            }
+    
+            p:last-of-type{
+                margin-top: 3%;
+            }
+        }
+    }
+    // Battle Button
+    .user-interaction {
+        .submission {
+            .submission-button{
+                font-size: 1.7rem;
+                border: 7px solid #f8f8f8;
+            } 
+        }
+    }
+}
+
+@media (max-width: 720px) {
+    // Instructions
+    .pulldown-menu {
+        // Instructions Text Section
+        .instructions {
+            h2 {
+                font-size: 2.75rem;
+                margin-top: 35%;
+            }
+    
+            p {
+                font-size: 1.8rem;
+                margin-top: 5%;
+            }
+
+            p:nth-of-type(2) {
+                margin-top: 10%;
+            }
+    
+            p:last-of-type{
+                margin-top: 10%;
+            }
+        }
+    }
+
+    // Selection Section
+    .user-interaction {
+        display: flex;
+        flex-direction: column;
+        
+        .selection,
+        .submission {
+            width: 100%;
+        }
+    }
+}
+
+@media (max-width: 525px) {
+    // Results Div
+    .results {
+        width: 75%;
+
+        .results-title {
+            font-size: 3rem;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    // Instructions
+    .pulldown-menu {
+        // Instructions Text Section
+        .instructions {
+            h2 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1.6rem;
+            }
+        }
+    }
+
+    // User Pokemon Selection
+    .user-interaction {
+        .selection {
+            .selection-button {
+                .sprite-label {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 440px) {
+    // Instructions
+    .pulldown-menu {
+        // Instructions Text Section
+        .instructions {
+            p {
+                font-size: 1.24rem;
+            }
+        }
+    }
+
+    // User Pokemon Selection
+    .user-interaction {
+        .selection {
+            .selection-button {
+                .sprite-label {
+                    font-size: 1.25rem;
+                }
+            }
+        }
+    }
+
+    // Results Div
+    // Results Div
+    .results {
+        .results-title {
+            font-size: 2rem;
+        }
+    }
+}
