--- a/styles/sass/_results.scss
+++ b/styles/sass/_results.scss
@@ -31,8 +31,10 @@
         align-items: center;
 
         .results-gif {
-            height: 100%;
+            height: auto;
+            max-height: 100%;
             width: auto;
+            max-width: 100%;
         }
     }
 
