comments and variables

--- a/styles/sass/_battleground.scss
+++ b/styles/sass/_battleground.scss
@@ -1,5 +1,5 @@
 
-
+// Battle Ground
 .battleground {
     padding: 2% 0;
     display: flex;
@@ -9,6 +9,7 @@
     align-items: center;
 }
 
+// Container for the Pokemon
 .pokemon-container {
     width: 100%;
     height: 175px;
@@ -40,14 +41,14 @@
         }
 
         .sprite-shadow {
-            background-color: #a8eb76;
-            border: 10px solid #83de7d;
+            background-color: $sprite-shadow-light;
+            border: 10px solid $sprite-shadow-dark;
             width: 80%;
             height: 80px;
             border-radius: 50%;
             position: relative;
             z-index: 1;
-        }
+        } 
     }
 }
 
