--- a/styles/sass/_battleground.scss
+++ b/styles/sass/_battleground.scss
@@ -16,8 +16,8 @@
     display: flex;
     justify-content: flex-end;
 
-    .browserPokemon,
-    .userPokemon {
+    .browser-pokemon,
+    .user-pokemon {
         width: 50%;
         display: flex;
         flex-wrap: wrap;
